# linux

./: .gitignore  CMake-Make-Ninja.md  CentOS_Setup.md  Linux-NiaoGe-YouDao.md  Makefile.md  README.md  Shell-YouDao.md  Ubuntu.md  cpp.md  g++.md  gdb.md  nginx.md  redis.md  shell.md  systemctl-systemd.md  systemd-dbus.md  work_exp.md
dbus/: CMakeLists.txt  main.cpp  sdbus-server-main.c
scripts/: disable_firewall.sh
src/: .static.cpp.swp  a.cpp  automic_test.cpp  cmp.sh  coin.cpp  interview-v.cpp  offset.cpp  ptr.cpp  rand_t.cpp  sizeof  sizeof.cpp  static.cpp  th.cpp  time.cpp  vfptr.cpp  weakptr.cpp  xCertMgr.sh
